3.1 added tables class hierarchy restructure ditched java 8 support, compatible with 10 and above